# abrasio-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
abrasio_mcp/: __init__.py  browser.py  server.py
abrasio_mcp/tools/: __init__.py  evaluate.py  interact.py  navigate.py  observe.py
scripts/: release.sh
