[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abrasio-mcp"
version = "0.1.0"
description = "MCP server that exposes Abrasio as an agentic browser for AI models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Scrape Technology", email = "joao.sobhie@scrapetechnology.com" }
]
keywords = [
    "mcp",
    "agent",
    "browser-automation",
    "abrasio",
    "stealth",
    "patchright",
    "ai-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "abrasio>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
abrasio-mcp = "abrasio_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Scrape-Technology/abrasio-mcp"
Repository = "https://github.com/Scrape-Technology/abrasio-mcp"

[tool.hatch.build.targets.wheel]
packages = ["abrasio_mcp"]
